# RecruitGen-AI

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  error.txt  package-lock.json  test_integration.ps1
backend/: .env.example  Dockerfile  ai_test.py  alembic.ini  docker_logs.txt  e2e_test.py  gemini_integration_test.py  logs.txt  logs2.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_orgs_and_users.py  0002_create_jobs_tables.py  0003_create_applications_and_resumes.py  0004_create_candidate_tables.py  0005_create_ai_tables.py  0006_create_remaining_tables.py  0007_expand_resume_profile.py  0008_add_research_experience.py  0009_remove_placeholder_reports.py  0010_hiring_decisions.py  0011_user_page_views.py  0012_candidate_parse_debug_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/application/: __init__.py
backend/app/core/: config.py  logging_config.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/domain/: __init__.py
backend/app/models/: __init__.py  application.py  candidate.py  candidate_match.py  candidate_ranking.py  hiring_recommendation.py  interview_schedule.py  job.py  job_analysis.py  notification.py  organization.py  report.py  resume.py  skill_evaluation.py  user.py  user_page_view.py
backend/app/providers/: __init__.py  (+2 more)
backend/scripts/: cleanup_db.py  e2e_test.py  production_validation.py  seed_admin.py
backend/tests/: test_resume_parser.py
(+147 files in other folders)
